Add partnership section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -106,8 +106,6 @@
         </div>
       </div>
     </div>
-
-
     <div class="section section-image" id="images">
       <div class="container" >
         <div class="row">
@@ -219,6 +217,28 @@
         </div>
       </div>   
     </div>
+
+     <div class="section section-partner" id="partner">
+      <div class="text-area">
+        <div class="container">
+          <div class="row">
+            <div class="title">
+              <h2 translate>Partnership</h2>
+              <div class="separator-container">
+                <div class="separator line-separator">
+                  ∎
+                </div>
+              </div>
+              <p class="large p-gd-15">
+                 <a href="https://www.otangani.fr/"><img  src="/assets/images/logo-otangani.jpg" alt="Otangani logo"></a>            
+              </p>
+            </div> 
+          </div>
+        </div>
+      </div>      
+    </div>
+
+
     <div class="section section-4" id="contact">
       <app-contact-map></app-contact-map>
     </div>    
