--- a/src/app/right-menu/right-menu.component.html
+++ b/src/app/right-menu/right-menu.component.html
@@ -20,6 +20,7 @@
 		<li><a [scrollTo]="'#whatwedo'" [scrollDuration]="700" translate (click)="closeMenu()">What we do</a></li>
 		<li><a [scrollTo]="'#slider'" [scrollDuration]="700" translate (click)="closeMenu()">Slider</a></li>
 		<li><a [scrollTo]="'#resume'" [scrollDuration]="700" translate (click)="closeMenu()">Resume</a></li>
+		<li><a [scrollTo]="'#partner'" [scrollDuration]="700" translate (click)="closeMenu()">Partnership</a></li>
 		<li><a [scrollTo]="'#contact'" [scrollDuration]="700" translate (click)="closeMenu()">Contact</a></li>
 	</ul>
 </div>
